Add: 1) Snackbar 2) Tabs 3) Card

--- a/index.html
+++ b/index.html
@@ -340,11 +340,168 @@
         <p class="snackbar__message">Can't send photo. Retry in 5 seconds.</p>
 
 
-        <button class="snackbar__action snackbar__text-btn">Retry</button>
-        <button class="snackbar__close snackbar__text-btn"> X</button>
+        <button class="snackbar__text-btn snackbar__action button-inherit-parent">Retry</button>
+        <button class="snackbar__text-btn snackbar__close button-inherit-parent"> X</button>
 
     </div>
     <!-- Snackbar Component Ends -->
     <hr class="comp-lib-hr">
+
+
+
+
+    <!-- Dialogue Component Starts -->
+    <h1 class="comp-lib-h1">@ Dialogue Component</h1>
+
+    <h2 class="comp-lib-h2">Dialogue with Title with Buttons Side-By-Side</h2>    
+    <!-- Dialogue Component Starts -- with Title  with Buttons Side-By-Side -->
+    <div class="dialogue dialogue--title-buttons-side-by-side">
+        <h2 class="dialogue__title">
+            Dialogue Header
+        </h2>
+        <h3 class="dialogue__supporting-text">
+            Dialogue Body Text
+        </h3>
+        <button class="dialogue__action-btn dialogue__action-btn__primary dialogue__action-btn--side-by-side button-inherit-parent">
+            Primary Action
+        </button>
+        <button class="dialogue__action-btn dialogue__action-btn__secondary dialogue__action-btn--side-by-side button-inherit-parent">
+            Secondary Action 
+        </button>
+    </div>
+    <!-- Dialogue Component Ends -- with Title  with Buttons Side-By-Side -->
+
+
+
+    <h2 class="comp-lib-h2">Dialogue with Title with Buttons Stacked</h2>
+    <!-- Dialogue Component Starts -- with Title  with Buttons Stacked -->
+    <div class="dialogue dialogue--buttons-stacked">
+        <h2 class="dialogue__title">
+            Dialogue Header
+        </h2>
+        <h3 class="dialogue__supporting-text">
+            Dialogue Body Text
+        </h3>
+        <button class="dialogue__action-btn dialogue__action-btn__primary dialogue__action-btn--stacked button-inherit-parent">
+            Primary Action
+        </button>
+        <button class="dialogue__action-btn dialogue__action-btn__secondary dialogue__action-btn--stacked button-inherit-parent">
+            Secondary Action 
+        </button>
+    </div>
+    <!-- Dialogue Component Ends -- with Title  with Buttons Stacked -->
+    
+
+    <h2 class="comp-lib-h2">Dialogue without Title with Buttons Side-By-Side</h2>
+    <!-- Dialogue Component Starts -- without Title  with Buttons Side-By-Side -->
+    <div class="dialogue dialogue--no-title-buttons-side-by-side">
+        <h2 class="dialogue__title dialogue__title--none">
+            Dialogue Header
+        </h2>
+        <h3 class="dialogue__supporting-text">
+            Dialogue Body Text
+        </h3>
+        <button class="dialogue__action-btn dialogue__action-btn__primary dialogue__action-btn--side-by-side button-inherit-parent">
+            Primary Action
+        </button>
+        <button class="dialogue__action-btn dialogue__action-btn__secondary dialogue__action-btn--side-by-side button-inherit-parent">
+            Secondary Action 
+        </button>
+    </div>
+
+    <!-- Dialogue Component Ends -- without Title  with Buttons Side-By-Side -->
+
+
+
+    <h2 class="comp-lib-h2">Dialogue without Title with Buttons Stacked</h2>
+    <!-- Dialogue Component Starts -- without Title  with Buttons Stacked -->
+    <div class="dialogue dialogue--no-title-buttons-stacked">
+        <h2 class="dialogue__title dialogue__title--none">
+            Dialogue Header
+        </h2>
+        <h3 class="dialogue__supporting-text">
+            Dialogue Body Text
+        </h3>
+        <button class="dialogue__action-btn dialogue__action-btn__primary dialogue__action-btn--stacked button-inherit-parent">
+            Primary Action
+        </button>
+        <button class="dialogue__action-btn dialogue__action-btn__secondary dialogue__action-btn--stacked button-inherit-parent">
+            Secondary Action 
+        </button>
+    </div>
+
+    <!-- Dialogue Component Ends -- without Title  with Buttons Stacked -->
+
+
+    <!-- Dialogue Component Ends -->
+    <hr class="comp-lib-hr">
+
+
+
+    <!-- Tabs Component Starts -->
+    <h1 class="comp-lib-h1">@ Tabs Component</h1>
+
+
+    <h2 class="comp-lib-h2">Tabs Component with Text</h2>
+    <!-- Tabs Component Starts -- with Text -->
+    <div class="tab-bar">
+        <div class="tab-bar__tab">
+            <div class="tab-bar__icon tab-bar__icon--none"></div>
+            <h3 class="tab-bar__title">Tab One</h3>
+        </div>
+        <div class="tab-bar__tab tab-bar__tab--focus">
+            <div class="tab-bar__icon tab-bar__icon--none"></div>
+            <h3 class="tab-bar__title">Tab Two</h3>
+        </div>
+        <div class="tab-bar__tab">
+            <div class="tab-bar__icon tab-bar__icon--none"></div>
+            <h3 class="tab-bar__title">Tab Three</h3>
+        </div>
+    </div>
+    <!-- Tabs Component Ends -- with Text -->
+
+
+    <h2 class="comp-lib-h2">Tabs Component with Text  and Icon Side-by-Side</h2>
+    <!-- Tabs Component Starts -- with Text and Icon side-by-side -->
+    <div class="tab-bar">
+        <div class="tab-bar__tab">
+            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <h3 class="tab-bar__title">Tab One</h3>
+        </div>
+        <div class="tab-bar__tab tab-bar__tab--focus">
+            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <h3 class="tab-bar__title">Tab Two</h3>
+        </div>
+        <div class="tab-bar__tab">
+            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <h3 class="tab-bar__title">Tab Three</h3>
+        </div>
+    </div>
+    <!-- Tabs Component Ends -- with Text and Icon side-by-side -->
+
+
+    <h2 class="comp-lib-h2">Tabs Component with Text and Icon Stacked</h2>
+    <!-- Tabs Component Starts -- with Text and Icon Stacked -->
+    <div class="tab-bar">
+        <div class="tab-bar__tab tab-bar__tab--icon-text-stacked ">
+            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <h3 class="tab-bar__title">Tab One</h3>
+        </div>
+        <div class="tab-bar__tab tab-bar__tab--icon-text-stacked tab-bar__tab--focus">
+            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <h3 class="tab-bar__title">Tab Two</h3>
+        </div>
+        <div class="tab-bar__tab tab-bar__tab--icon-text-stacked ">
+            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <h3 class="tab-bar__title">Tab Three</h3>
+        </div>
+    </div>
+    <!-- Tabs Component Ends -- with Text and Icon Stacked -->
+
+    <!-- Tabs Component Ends -->
+    <hr class="comp-lib-hr">
+
+
+
 </body>
 </html>
