Add two more varients of card. Update background color.

--- a/index.html
+++ b/index.html
@@ -203,6 +203,75 @@
 
 
 
+    <h2 class="comp-lib-h2">Card Component Basic Only Buttons</h2>
+    <!-- Card Component Starts -- Basic only buttons -->
+    <div class="card card-basic-only-buttons">
+        <img class="card__img card__img--basic-only-buttons"
+            src="https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg"/>
+
+        <div class="card__info">
+            <h2 class="card__primary-text">Mountains Hill Top</h2>
+            <h3 class="card__secondary-text">Author Name</h3>
+        </div>
+
+        <div class="card__description">
+            <p>Visit ten places on our planet that are undergoing the biggest changes today.</p>
+        </div>
+
+        <div class="card__actions">
+            <div class="card__buttons">
+                <button class="card__button button-inherit-parent">READ</button>
+                <button class="card__button button-inherit-parent">BOOKMARK</button>
+            </div>
+
+
+            <!-- Inset Icons base on need -->
+            <div class="card__icons card__icons-only-buttons">
+                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+            </div>
+
+        </div>
+    </div>
+    <!-- Card Component Ends -- Basic  only button -->
+
+
+
+    <h2 class="comp-lib-h2">Card Component Basic Only Icons</h2>
+    <!-- Card Component Starts -- Basic only Icons  -->
+    <div class="card card-basic-only-icons">
+        <img class="card__img card__img--basic-only-icons"
+            src="https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg"/>
+
+        <div class="card__info">
+            <h2 class="card__primary-text">Mountains Hill Top</h2>
+            <h3 class="card__secondary-text">Author Name</h3>
+        </div>
+
+        <div class="card__description">
+            <p>Visit ten places on our planet that are undergoing the biggest changes today.</p>
+        </div>
+
+        <div class="card__actions">
+            <div class="card__buttons card__buttons--basic-only-icons">
+                <button class="card__button button-inherit-parent">READ</button>
+                <button class="card__button button-inherit-parent">BOOKMARK</button>
+            </div>
+
+
+            <!-- Inset Icons base on need -->
+            <div class="card__icons">
+                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+            </div>
+
+        </div>
+    </div>
+    <!-- Card Component Ends -- Basic  only button -->
+
+
     <h2 class="comp-lib-h2">Card Horizontal Image and Text</h2>
     <!-- Card Component Starts -- Horizontal Image and Text -->
     <div class="card card-img-text-side-by-side">
@@ -241,7 +310,7 @@
 
 
 
-    
+
     <!-- Chip Component Starts -->
     <h1 class="comp-lib-h1">@ Chip Component</h1>
 
