Modularise CSS Add Header component
Refactor Card and Alert Component with relavant svgs

--- a/index.html
+++ b/index.html
@@ -40,22 +40,65 @@
     <!-- Alert Component Starts -->
     <h1 class="comp-lib-h1">@ Alert Component</h1>
 
-    <!-- Alert Component Description -->
-    <div class="alert">
+    <h2 class="comp-lib-h2">Alert Component Success</h2>
+    <!-- Alert Component Starts -- Success -->
+    <div class="alert alert--success">
+        <img class="alert__icon" src="/components/alert/success.svg" alt="success">
+        </img>
 
-        <div class="alert__bg-primary alert--position-start"></div>
-        <div class="alert__bg-dark alert--position-start"></div>
-
-        <div class="alert__content alert--position-start">
-            <img class="alert__icon" src="/flaticons/sync-green.png" alt="Image">
-            </img>
-
-            <div class="alert__text">
-                <h2 class="alert__title">Brutus Alert</h2>
-                <p class="alert__description">Beware the <strong>Ides of March!</strong></p>
+        <div class="alert__content">
+            <div class="alert__text alert__text--success">
+                <h2 class="alert__title">Success</h2>
+                <p class="alert__description">This is a success alert — <strong>check it out!</strong></p>
             </div>
         </div>
     </div>
+    <!-- Alert Component Ends -- Success -->
+
+    <h2 class="comp-lib-h2">Alert Component Error</h2>
+    <!-- Alert Component Starts -- Error -->
+    <div class="alert alert--error">
+        <img class="alert__icon" src="/components/alert/error.svg" alt="error">
+        </img>
+
+        <div class="alert__content">
+            <div class="alert__text alert__text--error">
+                <h2 class="alert__title">Error</h2>
+                <p class="alert__description">This is an error alert — <strong>check it out!</strong></p>
+            </div>
+        </div>
+    </div>
+    <!-- Alert Component Ends -- Error -->
+
+    <h2 class="comp-lib-h2">Alert Component Warning</h2>
+    <!-- Alert Component Starts -- Warning -->
+    <div class="alert alert--warning">
+        <img class="alert__icon" src="/components/alert/warning.svg" alt="warning">
+        </img>
+
+        <div class="alert__content">
+            <div class="alert__text alert__text--warning ">
+                <h2 class="alert__title">Warning</h2>
+                <p class="alert__description">This is a warning alert — <strong>check it out!</strong></p>
+            </div>
+        </div>
+    </div>
+    <!-- Alert Component Ends -- Warning -->
+
+    <h2 class="comp-lib-h2">Alert Component Info</h2>
+    <!-- Alert Component Starts -- Info -->
+    <div class="alert alert--info">
+        <img class="alert__icon" src="/components/alert/info.svg" alt="Info">
+        </img>
+
+        <div class="alert__content">
+            <div class="alert__text alert__text--info">
+                <h2 class="alert__title">Info</h2>
+                <p class="alert__description">This is an info alert — <strong>check it out!</strong></p>
+            </div>
+        </div>
+    </div>
+    <!-- Alert Component Ends -- Info -->
 
     <!-- Alert Component Ends -->
     <hr class="comp-lib-hr">
@@ -125,9 +168,9 @@
 
             <!-- Inset Icons base on need -->
             <div class="card__icons">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/components/card/like.svg" alt="like">
+                <img class="card__icon" src="/components/card/share.svg" alt="share">
+                <img class="card__icon" src="/components/card/menu.svg" alt="menu">
             </div>
 
         </div>
@@ -142,8 +185,8 @@
             src="https://material-components.github.io/material-components-web-catalog/static/media/photos/3x2/2.jpg"/>
 
         <div class="card__info card__info--basic-text-over-media">
-            <h2 class="card__primary-text">Mountains Hill Top</h2>
-            <h3 class="card__secondary-text">Author Name</h3>
+            <h2 class="card__primary-text card__primary-text--basic-text-over-media">Mountains Hill Top</h2>
+            <h3 class="card__secondary-text card__secondary-text--basic-text-over-media">Author Name</h3>
         </div>
 
         <div class="card__description">
@@ -159,9 +202,10 @@
 
             <!-- Inset Icons base on need -->
             <div class="card__icons">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/components/card/like.svg" alt="like">
+                <img class="card__icon" src="/components/card/share.svg" alt="share">
+                <img class="card__icon" src="/components/card/menu.svg" alt="menu">
+ 
             </div>
 
         </div>
@@ -192,9 +236,10 @@
 
             <!-- Inset Icons base on need -->
             <div class="card__icons">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/components/card/like.svg" alt="like">
+                <img class="card__icon" src="/components/card/share.svg" alt="share">
+                <img class="card__icon" src="/components/card/menu.svg" alt="menu">
+ 
             </div>
 
         </div>
@@ -227,9 +272,10 @@
 
             <!-- Inset Icons base on need -->
             <div class="card__icons card__icons-only-buttons">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/components/card/like.svg" alt="like">
+                <img class="card__icon" src="/components/card/share.svg" alt="share">
+                <img class="card__icon" src="/components/card/menu.svg" alt="menu">
+ 
             </div>
 
         </div>
@@ -262,9 +308,10 @@
 
             <!-- Inset Icons base on need -->
             <div class="card__icons">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/components/card/like.svg" alt="like">
+                <img class="card__icon" src="/components/card/share.svg" alt="share">
+                <img class="card__icon" src="/components/card/menu.svg" alt="menu">
+ 
             </div>
 
         </div>
@@ -296,9 +343,10 @@
 
             <!-- Inset Icons base on need -->
             <div class="card__icons">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
-                <img class="card__icon" src="/flaticons/mail.png" alt="Image">
+                <img class="card__icon" src="/components/card/like.svg" alt="like">
+                <img class="card__icon" src="/components/card/share.svg" alt="share">
+                <img class="card__icon" src="/components/card/menu.svg" alt="menu">
+ 
             </div>
 
         </div>
@@ -376,37 +424,142 @@
 
 
 
+
     <!-- Header Component Starts -->
     <h1 class="comp-lib-h1">@ Header Component</h1>
 
-    <!-- Header Component Regular -->
-    <div class="header">
 
-        <!-- <section  class="header__navigation"> -->
-            <button class="header__btn-download button-inherit-parent">
-                <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
-            </button>
-            <h3 class="header__title">
-                Just Do it
-            </h3>
-        <!-- </section> -->
+    <h2 class="comp-lib-h2">Header Component Standard</h2>
+    <!-- Header Component Starts -- Standard -->
+    <div class="header header--standard">
+        <button class="header__btn button-inherit-parent">
+            <img class="header__icon" src="/components/header/hamburger-menu.svg" alt="Image">
+        </button>
+        <h3 class="header__title">
+            San Francisco, CA
+        </h3>
 
         <div class="header__action">
-            <button class="header__btn-download button-inherit-parent">
-                <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <button class="header__btn button-inherit-parent">
+                <img class="header__icon" src="/components/header/download.svg" alt="Image">
             </button>
-            <button class="header__btn-print button-inherit-parent">
-                <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <button class="header__btn button-inherit-parent">
+                <img class="header__icon" src="/components/header/printer.svg" alt="Image">
             </button>
-            <button class="header__btn-save button-inherit-parent">
-                <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <button class="header__btn button-inherit-parent">
+                <img class="header__icon" src="/components/header/bookmark.svg" alt="Image">
             </button>
         </div>
     </div>
+    <!-- Header Component Ends -- Standard -->
+
+        
+
+    
+    <h2 class="comp-lib-h2">Header Component Short</h2>
+    <!-- Header Component Starts -- Short -->
+    <div class="header header--short">
+        <button class="header__btn header__btn--short button-inherit-parent">
+            <img class="header__icon" src="/components/header/hamburger-menu.svg" alt="Image">
+        </button>
+        <h3 class="header__title">
+            San Francisco, CA
+        </h3>
+
+        <div class="header__action">
+            <button class="header__btn header__btn--short button-inherit-parent">
+                <img class="header__icon" src="/components/header/download.svg" alt="Image">
+            </button>
+            <button class="header__btn header__btn--short button-inherit-parent">
+                <img class="header__icon" src="/components/header/printer.svg" alt="Image">
+            </button>
+            <button class="header__btn header__btn--short button-inherit-parent">
+                <img class="header__icon" src="/components/header/bookmark.svg" alt="Image">
+            </button>
+        </div>
+    </div>
+    <!-- Header Component Ends -- Short -->
+
+
+    <h2 class="comp-lib-h2">Header Component Short and Always Collapsed</h2>
+    <!-- Header Component Starts -- Short  and Always Collapsed -->
+    <div class="header header--short">
+        <button class="header__btn button-inherit-parent">
+            <img class="header__icon" src="/components/header/hamburger-menu.svg" alt="Image">
+        </button>
+        <h3 class="header__title">
+            San Francisco, CA
+        </h3>
+
+        <div class="header__action">
+            <button class="header__btn button-inherit-parent">
+                <img class="header__icon" src="/components/header/download.svg" alt="Image">
+            </button>
+            <button class="header__btn button-inherit-parent">
+                <img class="header__icon" src="/components/header/printer.svg" alt="Image">
+            </button>
+            <button class="header__btn button-inherit-parent">
+                <img class="header__icon" src="/components/header/bookmark.svg" alt="Image">
+            </button>
+        </div>
+    </div>
+    <!-- Header Component Ends -- Short and Always Collapsed -->
+
+
+    <h2 class="comp-lib-h2">Header Component Prominent</h2>
+    <!-- Header Component Starts -- Prominent -->
+    <div class="header header--prominent">
+        <button class="header__btn header__btn--prominent button-inherit-parent">
+            <img class="header__icon" src="/components/header/hamburger-menu.svg" alt="Image">
+        </button>
+        <h3 class="header__title header__title--prominent">
+            San Francisco, CA
+        </h3>
+
+        <div class="header__action">
+            <button class="header__btn header__btn--prominent button-inherit-parent">
+                <img class="header__icon" src="/components/header/download.svg" alt="Image">
+            </button>
+            <button class="header__btn header__btn--prominent button-inherit-parent">
+                <img class="header__icon" src="/components/header/printer.svg" alt="Image">
+            </button>
+            <button class="header__btn header__btn--prominent button-inherit-parent">
+                <img class="header__icon" src="/components/header/bookmark.svg" alt="Image">
+            </button>
+        </div>
+    </div>
+    <!-- Header Component Ends -- Prominent -->
+
+
+
+    <h2 class="comp-lib-h2">Header Component Prominentc Dense</h2>
+    <!-- Header Component Starts -- Prominent Dense -->
+    <div class="header header--prominent-dense">
+        <button class="header__btn header__btn--prominent-dense button-inherit-parent">
+            <img class="header__icon" src="/components/header/hamburger-menu.svg" alt="Image">
+        </button>
+        <h3 class="header__title header__title--prominent">
+            San Francisco, CA
+        </h3>
+
+        <div class="header__action">
+            <button class="header__btn header__btn--prominent-dense button-inherit-parent">
+                <img class="header__icon" src="/components/header/download.svg" alt="Image">
+            </button>
+            <button class="header__btn header__btn--prominent-dense button-inherit-parent">
+                <img class="header__icon" src="/components/header/printer.svg" alt="Image">
+            </button>
+            <button class="header__btn header__btn--prominent-dense button-inherit-parent">
+                <img class="header__icon" src="/components/header/bookmark.svg" alt="Image">
+            </button>
+        </div>
+    </div>
+    <!-- Header Component Ends -- Prominent Dense -->
 
 
     <!-- Header Component Ends -->
     <hr class="comp-lib-hr">
+
 
 
 
@@ -524,15 +677,15 @@
     <!-- Tabs Component Starts -- with Text -->
     <div class="tab-bar">
         <div class="tab-bar__tab">
-            <div class="tab-bar__icon tab-bar__icon--none"></div>
+            <img class="tab-bar__icon tab-bar__icon--none" src="/components/tab-bar/clock.svg" alt="clock">
             <h3 class="tab-bar__title">Tab One</h3>
         </div>
         <div class="tab-bar__tab tab-bar__tab--focus">
-            <div class="tab-bar__icon tab-bar__icon--none"></div>
+            <img class="tab-bar__icon tab-bar__icon--none" src="/components/tab-bar/location.svg" alt="location">
             <h3 class="tab-bar__title">Tab Two</h3>
         </div>
         <div class="tab-bar__tab">
-            <div class="tab-bar__icon tab-bar__icon--none"></div>
+            <img class="tab-bar__icon tab-bar__icon--none"  src="/components/tab-bar/heart.svg" alt="heart">
             <h3 class="tab-bar__title">Tab Three</h3>
         </div>
     </div>
@@ -543,15 +696,15 @@
     <!-- Tabs Component Starts -- with Text and Icon side-by-side -->
     <div class="tab-bar">
         <div class="tab-bar__tab">
-            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <img class="tab-bar__icon" src="/components/tab-bar/clock.svg" alt="clock">
             <h3 class="tab-bar__title">Tab One</h3>
         </div>
         <div class="tab-bar__tab tab-bar__tab--focus">
-            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <img class="tab-bar__icon" src="/components/tab-bar/location.svg" alt="location">
             <h3 class="tab-bar__title">Tab Two</h3>
         </div>
         <div class="tab-bar__tab">
-            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <img class="tab-bar__icon" src="/components/tab-bar/heart.svg" alt="heart">
             <h3 class="tab-bar__title">Tab Three</h3>
         </div>
     </div>
@@ -562,15 +715,15 @@
     <!-- Tabs Component Starts -- with Text and Icon Stacked -->
     <div class="tab-bar">
         <div class="tab-bar__tab tab-bar__tab--icon-text-stacked ">
-            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <img class="tab-bar__icon"  src="/components/tab-bar/clock.svg" alt="clock">
             <h3 class="tab-bar__title">Tab One</h3>
         </div>
         <div class="tab-bar__tab tab-bar__tab--icon-text-stacked tab-bar__tab--focus">
-            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <img class="tab-bar__icon" src="/components/tab-bar/location.svg" alt="location">
             <h3 class="tab-bar__title">Tab Two</h3>
         </div>
         <div class="tab-bar__tab tab-bar__tab--icon-text-stacked ">
-            <img class="tab-bar__icon" src="/flaticons/mail.png" alt="Image">
+            <img class="tab-bar__icon" src="/components/tab-bar/heart.svg" alt="heart">
             <h3 class="tab-bar__title">Tab Three</h3>
         </div>
     </div>
