Modularise Drawer component

--- a/index.html
+++ b/index.html
@@ -400,21 +400,21 @@
         </div>
 
         <div class="drawer__content-holder">
-            <div class="drawer__content ">
-                <img class="drawer__icon" src="/flaticons/mail.png" alt="Image">
-                <p class="drawer__icon-description">Message 1</p>
+            <div class="drawer__content drawer__content--focus">
+                <img class="drawer__icon" src="/components/drawer/inbox-primary.svg" alt="inbox">
+                <p class="drawer__icon-description">Inbox</p>
             </div>
             <div class="drawer__content">
-                <img class="drawer__icon" src="/flaticons/mail.png" alt="Image">
-                <p class="drawer__icon-description">Message 2</p>
+                <img class="drawer__icon" src="/components/drawer/star.svg" alt="star">
+                <p class="drawer__icon-description">Star</p>
             </div>
             <div class="drawer__content">
-                <img class="drawer__icon" src="/flaticons/mail.png" alt="Image">
-                <p class="drawer__icon-description">Message 3</p>
+                <img class="drawer__icon" src="/components/drawer/sent.svg" alt="sent mail">
+                <p class="drawer__icon-description">Sent Mail</p>
             </div>
             <div class="drawer__content">
-                <img class="drawer__icon" src="/flaticons/mail.png" alt="Image">
-                <p class="drawer__icon-description">Message 3</p>
+                <img class="drawer__icon" src="/components/drawer/draft.svg" alt="draft">
+                <p class="drawer__icon-description">Draft</p>
             </div>
         </div>
     </div>
